# defaultpoetry

./: README.md  pyproject.toml
defaultpoetry/: __main__.py
templates/: .pre-commit-config.yaml  pyproject.toml
